k8s/jackett/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
spec:
  rules:
  - host: jackett.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              number: 8080
